[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/dreamscape/MainMenu/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://src/dreamscape/MainMenu/SettingsMenuFont.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="SettingsMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC" type="PanelContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0.690196 )
margin_left = 578.0
margin_top = 124.0
margin_right = 876.0
margin_bottom = 776.0

[node name="VBC" type="VBoxContainer" parent="PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 291.0
margin_bottom = 645.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="FocusStyle" type="OptionButton" parent="PC/VBC"]
margin_right = 284.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 3 )
text = "Large Card Preview"
items = [ "Large Card Preview", null, false, 2, null, "Info Panels Only", null, false, 3, null, "Hand Card Zoom", null, false, 0, null ]
selected = 0

[node name="FancyAnimations" type="CheckButton" parent="PC/VBC"]
margin_top = 47.0
margin_right = 284.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 3 )
text = "Fancy Animations"

[node name="AnimatedTextBackgrounds" type="CheckButton" parent="PC/VBC"]
margin_top = 107.0
margin_right = 284.0
margin_bottom = 147.0
custom_fonts/font = ExtResource( 3 )
text = "Anim. Text Background"

[node name="EnableGlow" type="CheckButton" parent="PC/VBC"]
margin_top = 167.0
margin_right = 284.0
margin_bottom = 207.0
custom_fonts/font = ExtResource( 3 )
text = "Enable Glow"

[node name="InterruptMusic" type="CheckButton" parent="PC/VBC"]
margin_top = 227.0
margin_right = 284.0
margin_bottom = 267.0
custom_fonts/font = ExtResource( 3 )
pressed = true
text = "Interrupt Music"

[node name="MainVol" type="Label" parent="PC/VBC"]
margin_top = 287.0
margin_right = 284.0
margin_bottom = 308.0
custom_fonts/font = ExtResource( 3 )
text = "Main Volume"

[node name="MainVolSlider" type="HSlider" parent="PC/VBC"]
margin_top = 328.0
margin_right = 284.0
margin_bottom = 344.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVol" type="Label" parent="PC/VBC"]
margin_top = 364.0
margin_right = 284.0
margin_bottom = 385.0
custom_fonts/font = ExtResource( 3 )
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="PC/VBC"]
margin_top = 405.0
margin_right = 284.0
margin_bottom = 421.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundVol" type="Label" parent="PC/VBC"]
margin_top = 441.0
margin_right = 284.0
margin_bottom = 462.0
custom_fonts/font = ExtResource( 3 )
text = "Effects Volume"

[node name="SoundVolSlider" type="HSlider" parent="PC/VBC"]
margin_top = 482.0
margin_right = 284.0
margin_bottom = 498.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitToMain" type="Button" parent="PC/VBC"]
margin_top = 518.0
margin_right = 284.0
margin_bottom = 568.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Exit To Main Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="PC/VBC"]
margin_top = 588.0
margin_right = 284.0
margin_bottom = 638.0

[node name="Back" type="Button" parent="PC/VBC/HBoxContainer"]
margin_right = 284.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "BACK"

[connection signal="item_selected" from="PC/VBC/FocusStyle" to="." method="_on_FocusStyle_item_selected"]
[connection signal="toggled" from="PC/VBC/FancyAnimations" to="." method="_on_FancAnimations_toggled"]
[connection signal="toggled" from="PC/VBC/AnimatedTextBackgrounds" to="." method="_on_AnimatedTextBackgrounds_toggled"]
[connection signal="toggled" from="PC/VBC/EnableGlow" to="." method="_on_EnableGlow_toggled"]
[connection signal="toggled" from="PC/VBC/InterruptMusic" to="." method="_on_InterruptMusic_toggled"]
[connection signal="value_changed" from="PC/VBC/MainVolSlider" to="." method="_on_MainVolSlider_value_changed"]
[connection signal="value_changed" from="PC/VBC/MusicVolSlider" to="." method="_on_MusicVolSlider_value_changed"]
[connection signal="value_changed" from="PC/VBC/SoundVolSlider" to="." method="_on_SoundVolSlider_value_changed"]
[connection signal="pressed" from="PC/VBC/ExitToMain" to="." method="_on_ExitToMain_pressed"]
